Changing prerequisites to Java 17+